test/app-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eva-demo-smarthome
  labels:
    app: eva-demo-smarthome
spec:
  selector:
    matchLabels:
      app: eva-demo-smarthome
  replicas: 1
  template:
    metadata:
      labels:
        app: eva-demo-smarthome
    spec:
      containers:
      - name: eva-demo-smarthome
        image: altertech/eva-demo-smarthome:test
        imagePullPolicy: Never
        readinessProbe:
          httpGet:
            path: /ui/
            port: 8828
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
          - name: keys
            mountPath: /keys
      volumes:
        - name: keys
          secret:
            defaultMode: 0o400
            secretName: eva-demo-keys
