test/service.yml
apiVersion: v1
kind: Service
metadata:
  name: eva-demo-smarthome-svc
spec:
  selector:
    app: eva-demo-smarthome
  ports:
    - name: default
      protocol: TCP
      port: 8828
      targetPort: 8828
  type: NodePort
